--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" type="image/x-icon" href="assets\math-book.png">
+    <link rel="icon" type="image/x-icon" href="math-book.png">
 
 </head>
 <body>
@@ -45,7 +45,7 @@
             <div class="content">
                 <div class="card">
                     <div class="pdf-container">
-                        <iframe class="pdf-full" src="assets/Аяз би сынак эл.pdf" title="PDF ертегі"></iframe>
+                        <iframe class="pdf-full" src="Azya_bi_synak_el.pdf.pdf" title="PDF ертегі"></iframe>
                         <button class="fullscreen-btn" aria-label="Толық экранға шығару">
                             <svg viewBox="0 0 24 24" width="24" height="24">
                                 <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
@@ -139,4 +139,5 @@
 
     <script src="js.js"></script>
 </body>
+
 </html>
