--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="content">
                 <div class="card">
                     <div class="pdf-container">
-                        <iframe class="pdf-full" src="C:\Users\Nurtore\Desktop\проект\assets\online_viewer_net (8).html" title="PDF ертегі"></iframe>
+                        <iframe class="pdf-full" src="online_viewer_net (8).html" title="Геймбук"></iframe>
                         <button class="fullscreen-btn" aria-label="Толық экранға шығару">
                             <svg viewBox="0 0 24 24" width="24" height="24">
                                 <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
@@ -141,3 +141,4 @@
 </body>
 
 </html>
+
