--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
                     <div class="pdf-container">
                         <iframe class="pdf-full" src="Azya_bi_synak_el.pdf.pdf" title="PDF ертегі"></iframe>
                         <button class="fullscreen-btn" aria-label="Толық экранға шығару">
-                             <div class="pdf-container">
-                        <iframe class="pdf-full" src="gemini.pdf" title="PDF ертегі"></iframe>
-                        <button class="fullscreen-btn" aria-label="Толық экранға шығару">
                             <svg viewBox="0 0 24 24" width="24" height="24">
                                 <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
                             </svg>
+                             <!-- Второй PDF -->
+    <div class="card">
+        <div class="pdf-container">
+            <iframe class="pdf-full" src="gemini.pdf" title="PDF ертегі 2"></iframe>
+            <button class="fullscreen-btn" aria-label="Толық экранға шығару">
+                <svg viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                </svg>
+            </button>
                         </button>
                     </div>
                 </div>
@@ -144,5 +150,6 @@
 </body>
 
 </html>
+
 
 
