--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
 </div>
-
+</section>
     <section id="multfilmder" class="section tab-panel" role="tabpanel" aria-labelledby="tab-multfilmder" aria-hidden="true">
             <h2>Мультфильм</h2>
             <div class="content">
@@ -155,6 +155,7 @@
 </body>
 
 </html>
+
 
 
 
