--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Второй PDF -->
     <div class="card">
         <div class="pdf-container">
-            <iframe class="pdf-full" src="https://drive.google.com/file/d/14KX9pJywVhls3g_SynXMwNFPI3JeU72S/preview?usp=sharing" title="PDF ертегі 2" allow="autoplay"></iframe>
+            <iframe class="pdf-full" src="https://drive.google.com/file/d/14KX9pJywVhls3g_SynXMwNFPI3JeU72S/preview" title="PDF ертегі 2" allow="autoplay"></iframe>
             <button class="fullscreen-btn" aria-label="Толық экранға шығару">
                 <svg viewBox="0 0 24 24" width="24" height="24">
                     <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
@@ -155,6 +155,7 @@
 </body>
 
 </html>
+
 
 
 
